--- a/ansible/playbooks/tomcat.yml
+++ b/ansible/playbooks/tomcat.yml
@@ -4,6 +4,7 @@
   tasks:
    - name: Install Java 1.8
      apt: 
+      update_cache: yes
       name: openjdk-8-jdk 
       state: present
    - name: add group "tomcat"
